--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MyPetApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -18,12 +18,20 @@
         </activity>
 
         <activity android:name=".BrowseActivity"
-                  android:label="@string/title_activity_browse">
+                  android:label="MyPetApp">
         </activity>
 
         <activity android:name=".ListActivity">
         </activity>
-
+        <activity android:name=".LoginActivity"
+            android:label="Log In" />
+        <activity android:name=".RegisterActivity"
+            android:label="Register"/>
+        <activity android:name=".BrowseActivity"
+            android:label="Details"/>
+        <service android:name=".UserActivity"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
