fixes, updates and additions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sdmd.mgava.mypetsapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,29 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".BrowseActivity"
-                  android:label="MyPetApp">
-        </activity>
-
-        <activity android:name=".ListActivity">
-        </activity>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".LogInActivity"
             android:label="Log In" />
-        <activity android:name=".RegisterActivity"
+        <activity android:name=".RegistrationActivity"
             android:label="Register"/>
         <activity android:name=".BrowseActivity"
             android:label="Details"/>
-        <service android:name=".UserActivity"
+
+        <service android:name=".UserService"
             android:enabled="true"
             android:exported="false" />
+
     </application>
 
 </manifest>
