--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
+        <!--<activity android:name=".LogInActivity"-->
+            <!--android:label="Log In" />-->
+        <!--<activity android:name=".RegistrationActivity"-->
+            <!--android:label="Register"/>-->
+        <!--<activity android:name=".BrowseActivity"-->
+            <!--android:label="Details"/>-->
 
-        <activity android:name=".LogInActivity"
-            android:label="Log In" />
-        <activity android:name=".RegistrationActivity"
-            android:label="Register"/>
-        <activity android:name=".BrowseActivity"
-            android:label="Details"/>
-
-        <service android:name=".UserService"
-            android:enabled="true"
-            android:exported="false" />
+        <!--<service android:name=".UserService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="false" />-->
 
     </application>
 
