fixes, updates and additions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,12 @@
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
-        <!--<activity android:name=".LogInActivity"-->
-            <!--android:label="Log In" />-->
-        <!--<activity android:name=".RegistrationActivity"-->
-            <!--android:label="Register"/>-->
-        <!--<activity android:name=".BrowseActivity"-->
-            <!--android:label="Details"/>-->
+        <activity android:name=".LogInActivity"
+            android:label="Log In" />
+     <activity android:name=".RegistrationActivity"
+            android:label="Register"/>
+        <activity android:name=".BrowseActivity"
+            android:label="Details"/>
 
         <!--<service android:name=".UserService"-->
             <!--android:enabled="true"-->
