fixes, updates and additions and part of HW9

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sdmd.mgava.mypetsapp">
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
-    <application
+       <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="MyPetApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +23,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".CategoryList"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".PetList"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".PetDetails"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
@@ -27,16 +41,13 @@
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
-        <activity android:name=".LogInActivity"
-            android:label="Log In" />
-     <activity android:name=".RegistrationActivity"
-            android:label="Register"/>
-        <activity android:name=".BrowseActivity"
-            android:label="Details"/>
+        <!--<activity android:name=".LogInActivity"-->
+            <!--android:label="Log In" />-->
+     <!--<activity android:name=".RegistrationActivity"-->
+            <!--android:label="Register"/>-->
+        <!--<activity android:name=".BrowseActivity"-->
+            <!--android:label="Details"/>-->
 
-        <!--<service android:name=".UserService"-->
-            <!--android:enabled="true"-->
-            <!--android:exported="false" />-->
 
     </application>
 
